图片替换测试

--- a/index.htm
+++ b/index.htm
@@ -58,22 +58,22 @@
 			<div class="heart">
 			          <div class="cube">
 			              <div>
-			                  <img src="./media/1.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
+			                  <img src="./media/test.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
 			              </div>
 			              <div>
-			                  <img src="./media/1.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
+			                  <img src="./media/test.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
 			              </div>
 			              <div>
-			                 <img src="./media/1.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
+			                 <img src="./media/test.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
 			             </div>
 			             <div>
-			                 <img src="./media/1.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
+			                 <img src="./media/test.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
 			             </div>
 			             <div>
-			                 <img src="./media/1.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
+			                 <img src="./media/test.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
 			             </div>
 			             <div>
-			                 <img src="./media/1.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
+			                 <img src="./media/test.jpg" width="100" height="100" alt="" style="position: absolute;z-index: 1000;">
 			             </div>
 			         </div>
 			</div>
